# toys

./: CMakeLists.txt  Readme.md  tools.hpp
3rd/lib/cmake/yalantinglibs/: yalantinglibsConfig.cmake
data_placement/: CMakeLists.txt  clusters.txt  final_design.cpp  main.cpp
design_pattern/: CMakeLists.txt  template_method.cpp
ec_set/: CMakeLists.txt  main.cpp
producer_consumer/: CMakeLists.txt  main.cpp
rate_limit/: CMakeLists.txt  client.cpp  server.cpp  utils.h
test_coro_rpc/: CMakeLists.txt  coordinator.cpp  coordinator.h  proxy.cpp  proxy.h
tests/: CMakeLists.txt  main.cpp  test1.cpp  test2.cpp  test3.cpp  utils.hpp
variant/: CMakeLists.txt  main.cpp
